--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 <style>
 * {
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
 body {
-    margin: 0;
     font-family: 'Segoe UI', sans-serif;
     background: linear-gradient(135deg, #ff758c, #ff7eb3);
     color: white;
@@ -19,37 +20,30 @@ body {
     overflow-x: hidden;
 }
 
-/* CONTENEDORES */
+/* CONTENEDOR */
 .container {
     min-height: 100vh;
-    display: flex;
+    display: none;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     padding: 30px 20px;
-    position: absolute;
-    width: 100%;
-    top: 0;
-    left: 0;
-    transition: opacity 0.5s ease, transform 0.5s ease;
 }
 
-.hidden {
-    opacity: 0;
-    pointer-events: none;
-    transform: translateY(20px);
+.container.active {
+    display: flex;
 }
 
 /* TEXTOS */
 h1 {
-    font-size: 30px;
+    font-size: 28px;
     margin-bottom: 15px;
 }
 
 p {
     font-size: 18px;
     line-height: 1.6;
-    max-width: 400px;
+    max-width: 420px;
 }
 
 /* BOTONES */
@@ -91,106 +85,73 @@ button:active {
         opacity: 0;
     }
 }
-
-/* FINAL */
-.final-message {
-    animation: fadeIn 2s ease forwards;
-    opacity: 0;
-}
-
-@keyframes fadeIn {
-    to { opacity: 1; }
-}
 </style>
 </head>
 
 <body>
 
-<!-- PASO 1 -->
-<div class="container" id="step1">
+<div class="container active" id="step1">
     <h1>🎁 Laura...</h1>
     <p>Princesa, este regalo solo se desbloquea si respondes 😌</p>
     <button onclick="nextStep('step2')">Acepto 💕</button>
 </div>
 
-<!-- PASO 2 -->
-<div class="container hidden" id="step2">
+<div class="container" id="step2">
     <h1>Pregunta 1 👀</h1>
     <p>¿Quién dijo "te amo" primero?</p>
     <button onclick="nextStep('step3')">Juan</button>
     <button onclick="nextStep('step3')">Laura</button>
 </div>
 
-<!-- PASO 3 -->
-<div class="container hidden" id="step3">
+<div class="container" id="step3">
     <h1>Pregunta 2 💭</h1>
     <p>¿Qué pasó el 04 de junio de 2025?</p>
     <button onclick="wrongAnswer()">Fue nuestra primera vez</button>
     <button onclick="nextStep('step4')">Fuimos al cine por primera vez</button>
 </div>
 
-<!-- PASO 4 -->
-<div class="container hidden" id="step4">
+<div class="container" id="step4">
     <h1>Última pregunta...</h1>
     <p>¿Tú me amas?</p>
     <button onclick="showFinal()">Siempre 💍</button>
     <button onclick="showFinal()">Más que ayer 🤍</button>
 </div>
 
-<!-- FINAL -->
-<div class="container hidden" id="final">
-    <div class="final-message">
-        <h1>🔓 FELICES 18, PRINCESA 🎂</h1>
-        <p>
-            Hoy cumples 18…<br><br>
-            Y aunque sé que este día para ti es un día más,<br>
-            quiero que desde hoy tenga un significado diferente.<br><br>
-            Porque el 19 de febrero de 2025 te hablé con la excusa más tonta del mundo…<br>
-            pero fue la mejor decisión de mi vida.<br><br>
-            El 29 de octubre lloramos juntos cuando te pedí que fueras mi novia,<br>
-            y desde antes de ese día, incluso con peleas, nunca he dejado de verte como mi futuro.<br><br>
-            Cuando miro tus ojos y esos cachetes que me encantan,<br>
-            siento que estoy viendo toda mi vida contigo.<br><br>
-            Pena es robar y volarse los transmetro…<br>
-            pero no es pena enamorarme de ti como lo hice.<br><br>
-            Gracias por existir, princesa.<br>
-            Te amo hoy, mañana y siempre 🤍
-        </p>
-    </div>
+<div class="container" id="final">
+    <h1>🔓 FELICES 18, PRINCESA 🎂</h1>
+    <p>
+        Hoy cumples 18…<br><br>
+        Porque el 19 de febrero de 2025 te hablé con la excusa más tonta del mundo…<br>
+        pero fue la mejor decisión de mi vida.<br><br>
+        El 29 de octubre lloramos juntos cuando te pedí que fueras mi novia,<br>
+        y nunca he dejado de verte como mi futuro.<br><br>
+        Cuando miro tus ojos y esos cachetes que me encantan,<br>
+        siento que estoy viendo toda mi vida contigo.<br><br>
+        Pena es robar y volarse los transmetro…<br>
+        pero no es pena enamorarme de ti como lo hice.<br><br>
+        Te amo hoy y siempre 🤍
+    </p>
 </div>
 
 <script>
-function nextStep(nextId) {
-    document.querySelectorAll('.container').forEach(c => {
-        c.classList.add('hidden');
+function nextStep(id) {
+    document.querySelectorAll(".container").forEach(c => {
+        c.classList.remove("active");
     });
-
-    setTimeout(() => {
-        document.getElementById(nextId).classList.remove('hidden');
-    }, 200);
+    document.getElementById(id).classList.add("active");
 }
 
 function wrongAnswer() {
     alert("Mmm… esa no fue ese dia, intenta otra vez princesa 🤍");
-    
-    if (navigator.vibrate) {
-        navigator.vibrate([200, 100, 200]);
-    }
-
-    nextStep('step1');
+    if (navigator.vibrate) navigator.vibrate(300);
+    nextStep("step1");
 }
 
 function showFinal() {
-    document.querySelectorAll('.container').forEach(c => {
-        c.classList.add('hidden');
-    });
-
-    setTimeout(() => {
-        document.getElementById('final').classList.remove('hidden');
-    }, 200);
+    nextStep("final");
 }
 
-/* CORAZONES CONSTANTES */
+/* Corazones constantes */
 function createHeart() {
     const heart = document.createElement("div");
     heart.className = "heart";
